--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "rollup": "0.56.5",
     "sassdoc": "^2.7.4",
     "slash": "^3.0.0",
-    "yargs": "^17.6.2"
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@percy/cli": "^1.14.0",
