--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,8 @@
   "name": "govuk-frontend-review",
   "description": "GOV.UK Frontend review app",
   "engines": {
-    "node": "^16.13.0",
-    "npm": "^8.1.0"
+    "node": "^18.12.0",
+    "npm": "^8.1.0 || ^9.1.0"
   },
   "license": "MIT",
   "scripts": {
