Percy uploads should complete before “finalizing”
Investigating fix for Percy uploads still in progress when the CLI thinks we’ve finished, and supporting retries

https://docs.percy.io/docs/parallel-test-suites

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -31,4 +31,7 @@ jobs:
         run: npm run serve &
 
       - name: Send screenshots to Percy
-        run: npx percy exec -- npm run test:screenshots
+        run: npx percy exec --parallel -- npm run test:screenshots
+
+      - name: Finalise Percy build
+        run: npx percy build:finalize
