Allow Sass compilation to restart after `gulp dev` errors

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "minimatch": "^5.1.0",
     "node-sass": "^8.0.0",
     "nunjucks": "^3.2.3",
+    "plugin-error": "^2.0.0",
     "postcss": "^8.4.19",
     "postcss-pseudo-classes": "^0.2.1",
     "postcss-scss": "^4.0.5",
