--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "rollup": "0.59.4",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0",
-    "uglify-js": "^3.17.4",
+    "terser": "^5.16.1",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
