--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "stylelint": "^14.16.0",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^5.0.0",
+    "typescript": "^4.9.3",
     "vinyl": "^3.0.0",
     "wait-on": "^6.0.1"
   }
