--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "postbuild:package": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-package*\"",
     "postbuild:dist": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-dist*\"",
     "pretest": "npm run build:compile",
-    "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
+    "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50% && size-limit",
     "test:screenshots": "node ./tasks/screenshot-components.mjs",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "npm run lint:js:cli -- \"**/*.{cjs,js,mjs}\"",
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "lint:scss": "npm run lint:scss:cli -- \"{app,src}/**/*.scss\"",
     "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "size": "npm run build:dist && size-limit"
   },
   "dependencies": {
     "@babel/core": "^7.20.5",
@@ -80,6 +81,7 @@
     "@percy/cli": "^1.16.0",
     "@percy/puppeteer": "^2.0.2",
     "@percy/sdk-utils": "^1.16.0",
+    "@size-limit/preset-big-lib": "^8.1.0",
     "babel-jest": "^29.3.1",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.29.0",
@@ -101,11 +103,18 @@
     "outdent": "^0.8.0",
     "puppeteer": "^19.3.0",
     "sass-color-helpers": "^2.1.1",
+    "size-limit": "^8.1.0",
     "standard": "^17.0.0",
     "stylelint": "^14.16.0",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^5.0.0",
     "vinyl": "^3.0.0",
     "wait-on": "^6.0.1"
-  }
+  },
+  "size-limit": [
+    {
+      "limit": "500ms",
+      "path": "dist/govuk-frontend-4.4.0.min.js"
+    }
+  ]
 }
