--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "@percy/cli": "^1.16.0",
     "@percy/puppeteer": "^2.0.2",
     "@percy/sdk-utils": "^1.16.0",
-    "@size-limit/preset-big-lib": "^8.1.0",
+    "@size-limit/esbuild": "8.1.0",
+    "@size-limit/file": "8.1.0",
+    "@size-limit/time": "8.1.0",
     "babel-jest": "^29.3.1",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.29.0",
@@ -113,8 +115,17 @@
   },
   "size-limit": [
     {
-      "limit": "500ms",
+      "limit": "400ms",
       "path": "dist/govuk-frontend-4.4.0.min.js"
+    },
+    {
+      "limit": "400ms",
+      "path": "package/govuk-esm/all.mjs"
+    },
+    {
+      "limit": "260ms",
+      "path": "package/govuk-esm/all.mjs",
+      "import": "{ Accordion }"
     }
   ]
 }
