--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.5.2",
     "@percy/cli": "^1.16.0",
     "@percy/puppeteer": "^2.0.2",
     "@percy/sdk-utils": "^1.16.0",
