--- a/package.json
+++ b/package.json
@@ -83,11 +83,8 @@
     "babel-jest": "^29.3.1",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.29.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-jsdoc": "^39.6.4",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1",
     "html-validate": "7.10.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
