--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -13,6 +13,9 @@ jobs:
     name: Send screenshots
     runs-on: ubuntu-latest
 
+    # Skip when secrets are unavailable on forks
+    if: github.repository == 'alphagovuk/govuk-frontend'
+
     env:
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
       PORT: 8888
