Use standalone Rollup task (no Gulp)

--- a/package.json
+++ b/package.json
@@ -47,15 +47,12 @@
     "front-matter": "^4.0.2",
     "glob": "^8.0.3",
     "gulp": "^4.0.2",
-    "gulp-better-rollup": "3.1.0",
     "gulp-cli": "^2.3.0",
-    "gulp-if": "^3.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-task-listing": "^1.1.1",
-    "gulp-uglify": "^3.0.2",
     "js-yaml": "^4.1.0",
     "jsdoc": "^4.0.0",
     "jsdoc-tsimport-plugin": "^1.0.5",
@@ -74,6 +71,7 @@
     "rollup": "0.56.5",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0",
+    "uglify-js": "^3.17.4",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
@@ -98,6 +96,7 @@
     "jest-environment-puppeteer": "^6.2.0",
     "jest-serializer-html": "^7.1.0",
     "lint-staged": "^13.1.0",
+    "magic-string": "^0.27.0",
     "outdent": "^0.8.0",
     "puppeteer": "^19.4.0",
     "sass-color-helpers": "^2.1.1",
