Configure Heroku review app dyno size to “eco”
These may represent the defaults but we had a billing blip today where some busy PRs were being charged as “basic” (not “eco”) size dynos

Formation settings taken from:
https://stackoverflow.com/a/72889265

--- a/app.json
+++ b/app.json
@@ -1,7 +1,5 @@
 {
   "name": "govuk-frontend",
-  "scripts": {
-  },
   "env": {
     "HEROKU_APP": "REVIEW"
   },
@@ -10,5 +8,21 @@
     {
       "url": "heroku/nodejs"
     }
-  ]
+  ],
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "basic"
+    }
+  },
+  "environments": {
+    "review": {
+      "formation": {
+        "web": {
+          "quantity": 1,
+          "size": "eco"
+        }
+      }
+    }
+  }
 }
