--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
     "rollup": "^3.7.4",
+    "rollup-plugin-visualizer": "^5.8.3",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0",
     "uglify-js": "^3.17.4",
