Provide a standalone way to run rollup for stats gathering

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "workspaces": [
     "app",
     "docs/examples/*",
-    "package"
+    "package",
+    "stats"
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
