Configure Dependabot for direct npm updates only
We regularly receive Dependabot PRs with only `package-lock.json` changes for “dependencies of dependencies”

These updates won’t appear in `npm outdated` and are often followed up by another PR from the package author anyway

For example updates for:

1. `core-js-compat`
2. `@babel/helper-*`
3. `@babel/plugin-*`

Which would have been included in `@babel/preset-env` updates anyway

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     versioning-strategy: increase
 
     allow:
-      - dependency-type: all
+      - dependency-type: direct
 
     ignore:
       # Ignore major updates (breaks IE8 PostCSS plugins)
