Suffix GitHub actions cache keys with runner OS

--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -10,7 +10,7 @@ runs:
 
       with:
         # Restore `node_modules` cache (unless packages change)
-        key: npm-install-cache-${{ hashFiles('package-lock.json', '**/package.json') }}
+        key: npm-install-cache-${{ runner.os }}-${{ hashFiles('package-lock.json', '**/package.json') }}
         path: node_modules
 
     - name: Setup Node.js
