--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "lint:scss": "npm run lint:scss:cli -- \"{app,src}/**/*.scss\"",
     "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
     "@babel/core": "^7.20.12",
@@ -78,14 +79,20 @@
     "@percy/cli": "^1.16.0",
     "@percy/puppeteer": "^2.0.2",
     "@percy/sdk-utils": "^1.16.0",
+    "@wdio/cli": "^8.1.3",
+    "@wdio/jasmine-framework": "^8.1.3",
+    "@wdio/local-runner": "^8.1.3",
+    "@wdio/spec-reporter": "^8.1.2",
     "babel-jest": "^29.3.1",
     "cheerio": "^1.0.0-rc.12",
+    "chromedriver": "^108.0.0",
     "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-wdio": "^8.0.14",
     "html-validate": "7.12.2",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
@@ -105,6 +112,7 @@
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.1",
     "vinyl": "^3.0.0",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "wdio-chromedriver-service": "^8.0.1"
   }
 }
