--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-es-x": "^5.4.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-n": "^15.6.0",
