--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,15 @@ on:
       - 'support/**'
 
   workflow_dispatch:
+    inputs:
+      runner:
+        description: Run tests on
+        type: choice
+        default: ubuntu-latest
+        options:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
 
 concurrency:
   group: tests-${{ github.head_ref || github.run_id }}
@@ -18,7 +27,7 @@ concurrency:
 jobs:
   install:
     name: Install
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
 
     env:
       PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
@@ -32,7 +41,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
     needs: [install]
 
     steps:
@@ -43,15 +52,15 @@ jobs:
         uses: ./.github/workflows/actions/build
 
   lint:
-    name: ${{ matrix.description }}
-    runs-on: ubuntu-latest
+    name: ${{ matrix.task.description }}
+    runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
     needs: [install]
 
     strategy:
       fail-fast: false
 
       matrix:
-        include:
+        task:
           - description: Lint Sass
             name: lint-scss
             run: npm run lint:scss
@@ -82,22 +91,22 @@ jobs:
         if: ${{ matrix.cache }}
         uses: actions/cache@v3
         with:
-          key: ${{ matrix.name }}-cache-${{ runner.os }}
-          path: ${{ matrix.cache }}
+          key: ${{ matrix.task.name }}-cache-${{ runner.os }}
+          path: ${{ matrix.task.cache }}
 
       - name: Run lint task
-        run: ${{ matrix.run }}
+        run: ${{ matrix.task.run }}
 
   test:
-    name: ${{ matrix.description }}
-    runs-on: ubuntu-latest
+    name: ${{ matrix.task.description }}
+    runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
     needs: [install]
 
     strategy:
       fail-fast: false
 
       matrix:
-        include:
+        task:
           - description: Nunjucks macro tests
             name: test-macro
             run: npx jest --color --selectProjects "Nunjucks macro tests"
@@ -116,32 +125,32 @@ jobs:
         uses: ./.github/workflows/actions/install-node
 
       - name: Cache task
-        if: ${{ matrix.cache }}
+        if: ${{ matrix.task.cache }}
         uses: actions/cache@v3
         with:
-          key: ${{ matrix.name }}-cache-${{ runner.os }}
-          path: ${{ matrix.cache }}
+          key: ${{ matrix.task.name }}-cache-${{ runner.os }}
+          path: ${{ matrix.task.cache }}
 
       - name: Run test task
-        run: ${{ matrix.run }}
+        run: ${{ matrix.task.run }}
 
       - name: Save test coverage
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.description }} coverage
+          name: ${{ matrix.task.description }} coverage
           path: coverage
           if-no-files-found: ignore
 
   verify:
-    name: ${{ matrix.description }}
-    runs-on: ubuntu-latest
+    name: ${{ matrix.task.description }}
+    runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
     needs: [install, build]
 
     strategy:
       fail-fast: false
 
       matrix:
-        include:
+        task:
           - description: Verify package build
             name: test-build-package
             run: npm run build:package
@@ -172,15 +181,15 @@ jobs:
       - name: Restore build
         uses: ./.github/workflows/actions/build
 
-      - name: Cache task
-        if: ${{ matrix.cache }}
+      - name: Cache Jest
+        if: ${{ matrix.task.cache }}
         uses: actions/cache@v3
         with:
-          key: ${{ matrix.name }}-cache-${{ runner.os }}
-          path: ${{ matrix.cache }}
+          key: ${{ matrix.task.name }}-cache-${{ runner.os }}
+          path: ${{ matrix.task.cache }}
 
       - name: Run verify task
-        run: ${{ matrix.run }}
+        run: ${{ matrix.task.run }}
 
   regression:
     name: Percy
