Puppeteer browser download deferred until first run
Chromium is now only downloaded when necessary to reduce cache size between GitHub Actions workflow steps

--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -11,9 +11,7 @@ runs:
       with:
         # Restore `node_modules` cache (unless packages change)
         key: npm-install-cache-${{ hashFiles('package-lock.json', '**/package.json') }}
-        path: |
-          .cache/puppeteer
-          node_modules
+        path: node_modules
 
     - name: Setup Node.js
       uses: ./.github/workflows/actions/setup-node
