Change Phase Banner tag parameter to required
The tag parameter is not listed as being required, however the component does not render correctly if it's omitted. As such, it should probably be marked as required.

--- a/src/govuk/components/phase-banner/phase-banner.yaml
+++ b/src/govuk/components/phase-banner/phase-banner.yaml
@@ -9,7 +9,7 @@ params:
   description: If `text` is set, this is not required. HTML to use within the phase banner. If `html` is provided, the `text` option will be ignored.
 - name: tag
   type: object
-  required: false
+  required: true
   description: Options for the tag component.
   isComponent: true
 - name: classes
