--- a/src/govuk/components/file-upload/file-upload.yaml
+++ b/src/govuk/components/file-upload/file-upload.yaml
@@ -11,6 +11,10 @@ params:
     type: string
     required: false
     description: Optional initial value of the input.
+  - name: disabled
+    type: boolean
+    required: false
+    description: If `true`, file input will be disabled.
   - name: describedBy
     type: string
     required: false
