--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -19,6 +19,10 @@ params:
     type: string
     required: false
     description: Optional initial value of the input.
+  - name: disabled
+    type: boolean
+    required: false
+    description: If `true`, input will be disabled.
   - name: describedBy
     type: string
     required: false
