--- a/src/govuk/components/textarea/textarea.yaml
+++ b/src/govuk/components/textarea/textarea.yaml
@@ -19,6 +19,10 @@ params:
     type: string
     required: false
     description: Optional initial value of the textarea.
+  - name: disabled
+    type: boolean
+    required: false
+    description: If `true`, textarea will be disabled.
   - name: describedBy
     type: string
     required: false
