--- a/.editorconfig
+++ b/.editorconfig
@@ -51,7 +51,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.js]
+[*.{cjs,js,mjs}]
 indent_size = 2
 indent_style = space
 charset = utf-8
