--- a/.editorconfig
+++ b/.editorconfig
@@ -27,7 +27,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.html]
+[*.njk]
 indent_size = 2
 indent_style = space
 charset = utf-8
@@ -35,7 +35,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.njk]
+[*.html]
 indent_size = 2
 indent_style = space
 charset = utf-8
@@ -92,7 +92,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.yml]
+[*.{yml,yaml}]
 indent_size = 2
 indent_style = space
 charset = utf-8
@@ -105,6 +105,11 @@ indent_size = 2
 indent_style = tab
 charset = utf-8
 end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[Gemfile]
+charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
