Add action for collecting stats in Github
request-checks: true

--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -13,7 +13,7 @@ runs:
         key: npm-install-cache-${{ hashFiles('package-lock.json', '**/package.json') }}
         path: |
           .cache/puppeteer
-          node_modules
+          **/node_modules
 
     - name: Setup Node.js
       uses: ./.github/workflows/actions/setup-node
