--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
     "test:screenshots": "node ./tasks/screenshot-components.mjs",
     "lint": "npm run lint:docs && npm run lint:js && npm run lint:scss",
-    "lint:docs": "npm run lint:docs:cli -- \"**/*.{json,md}\"",
+    "lint:docs": "npm run lint:docs:cli -- \"**/*.{json,md,yaml,yml}\"",
     "lint:docs:cli": "prettier --cache --cache-location .cache/eslint --cache-strategy content --check --ignore-path .lintignore",
     "lint:js": "npm run lint:js:cli -- \"**/*.{cjs,js,mjs}\"",
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .lintignore --max-warnings 0",
