--- a/src/govuk/components/skip-link/skip-link.yaml
+++ b/src/govuk/components/skip-link/skip-link.yaml
@@ -1,24 +1,24 @@
 params:
-- name: text
-  type: string
-  required: true
-  description: If `html` is set, this is not required. Text to use within the skip link component. If `html` is provided, the `text` option will be ignored.
-- name: html
-  type: string
-  required: true
-  description: If `text` is set, this is not required. HTML to use within the skip link component. If `html` is provided, the `text` option will be ignored.
-- name: href
-  type: string
-  required: false
-  description: The value of the skip link’s `href` attribute. Defaults to `#content` if you do not provide a value.
-- name: classes
-  type: string
-  required: false
-  description: Classes to add to the skip link.
-- name: attributes
-  type: object
-  required: false
-  description: HTML attributes (for example data attributes) to add to the skip link.
+  - name: text
+    type: string
+    required: true
+    description: If `html` is set, this is not required. Text to use within the skip link component. If `html` is provided, the `text` option will be ignored.
+  - name: html
+    type: string
+    required: true
+    description: If `text` is set, this is not required. HTML to use within the skip link component. If `html` is provided, the `text` option will be ignored.
+  - name: href
+    type: string
+    required: false
+    description: The value of the skip link’s `href` attribute. Defaults to `#content` if you do not provide a value.
+  - name: classes
+    type: string
+    required: false
+    description: Classes to add to the skip link.
+  - name: attributes
+    type: object
+    required: false
+    description: HTML attributes (for example data attributes) to add to the skip link.
 
 examples:
   - name: default
@@ -33,7 +33,7 @@ examples:
       text: Skip to main content
       href: '#content'
 
-# Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
+  # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
   - name: no href
     hidden: true
     data:
@@ -42,7 +42,7 @@ examples:
     hidden: true
     data:
       text: Skip to custom content
-      href: "#custom"
+      href: '#custom'
   - name: custom text
     hidden: true
     data:
