--- a/src/govuk/components/warning-text/warning-text.yaml
+++ b/src/govuk/components/warning-text/warning-text.yaml
@@ -1,24 +1,24 @@
 params:
-- name: text
-  type: string
-  required: true
-  description: If `html` is set, this is not required. Text to use within the warning text component. If `html` is provided, the `text` option will be ignored.
-- name: html
-  type: string
-  required: true
-  description: If `text` is set, this is not required. HTML to use within the warning text component. If `html` is provided, the `text` option will be ignored.
-- name: iconFallbackText
-  type: string
-  required: true
-  description: The fallback text for the icon.
-- name: classes
-  type: string
-  required: false
-  description: Classes to add to the warning text.
-- name: attributes
-  type: object
-  required: false
-  description: HTML attributes (for example data attributes) to add to the warning text.
+  - name: text
+    type: string
+    required: true
+    description: If `html` is set, this is not required. Text to use within the warning text component. If `html` is provided, the `text` option will be ignored.
+  - name: html
+    type: string
+    required: true
+    description: If `text` is set, this is not required. HTML to use within the warning text component. If `html` is provided, the `text` option will be ignored.
+  - name: iconFallbackText
+    type: string
+    required: true
+    description: The fallback text for the icon.
+  - name: classes
+    type: string
+    required: false
+    description: Classes to add to the warning text.
+  - name: attributes
+    type: object
+    required: false
+    description: HTML attributes (for example data attributes) to add to the warning text.
 
 examples:
   - name: default
@@ -27,10 +27,10 @@ examples:
       iconFallbackText: Warning
   - name: multiple lines
     data:
-      text: "If you are not covered by this License), You must: (a) comply with the terms stated above for the purpose of this license. It explains, for example, the production of a Source form, including but not limited to, the implied warranties or conditions of this License, without any additional file created by such Respondent to you under Sections 2.1 and 2.2 above. Larger Works. You may choose to distribute such a notice and a brief idea of what it does."
+      text: 'If you are not covered by this License), You must: (a) comply with the terms stated above for the purpose of this license. It explains, for example, the production of a Source form, including but not limited to, the implied warranties or conditions of this License, without any additional file created by such Respondent to you under Sections 2.1 and 2.2 above. Larger Works. You may choose to distribute such a notice and a brief idea of what it does.'
       iconFallbackText: Warning
 
-# Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
+  # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
   - name: attributes
     hidden: true
     data:
