Share ports between development and test
Port conflicts and jest-dev-server teardown issues have been resolved for a while

This change allows for much faster `jest --watch` since Review app startup can be skipped entirely when already running in another terminal

--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "nodemon",
-    "start": "node start.js"
+    "start": "node start.mjs"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
